syntax = "proto3";

option go_package = "rpcWithApplicationLayerAuth/echo";

package echo;

service EchoService {
  rpc Echo (EchoRequest) returns (EchoReply) {}
}

message EchoRequest {
  string message = 1;
  string publicKey = 2;
  bytes signature = 3;
}

message EchoReply {
  string message = 1;
}
